Add android support
The only API not supported is showNotificationBanner since there is no
equivalent feature from Google Play Game Services.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
       "GameKit": "js"
     },
     "extensions": {
-      "ios": "ios"
+      "ios": "ios",
+      "android": "android",
+      "build": "build"
     }
   },
   "devDependencies": {
